<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_artikel_news"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title_news"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:maxLines="3"
            android:text="@string/txt_deskripsi_1"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_author_news"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/txt_stasiun_tv_2"
            android:textColor="@color/dark_gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_time_news"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/waktu"
            android:textColor="@color/dark_gray"
            android:textSize="12sp" />


        <ImageView
            android:id="@+id/img_artikel_news"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/artikel1" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>