<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.NewsFragment">

    <TextView
        android:id="@+id/title_news"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="Berita"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_artikel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/title_news"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_artikel1"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/title_news">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/tobat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="125dp"
            android:layout_marginEnd="20dp"
            android:text="@string/txt_deskripsi"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:id="@+id/cv_artikel_2"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/tv_title_2"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:maxLines="3"
                    android:text="@string/txt_deskripsi_1"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_author_news"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/txt_stasiun_tv"
                    android:textColor="@color/dark_gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_time_news"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/waktu"
                    android:textColor="@color/dark_gray"
                    android:textSize="12sp" />


                <ImageView
                    android:id="@+id/img_artikel_2"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"

                    android:src="@drawable/news1" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_artikel_3"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/tv_title_3"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:maxLines="3"
                    android:text="@string/txt_deskripsi_2"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_author_3"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/txt_stasiun_tv_2"
                    android:textColor="@color/dark_gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_time_news_3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/waktu"
                    android:textColor="@color/dark_gray"
                    android:textSize="12sp" />


                <ImageView
                    android:id="@+id/img_artikel_3"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/news2" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_artikel_4"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="80dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/tv_title_4"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:maxLines="3"

                    android:text="@string/txt_deskripsi_3"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_author_4"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/txt_stasiun_tv_3"
                    android:textColor="@color/dark_gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_time_4"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/waktu"
                    android:textColor="@color/dark_gray"
                    android:textSize="12sp" />


                <ImageView
                    android:id="@+id/img_artikel_4"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/img_2" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>
