<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F6F2"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:context=".ui.HomeFragment">

    <TextView
        android:id="@+id/xeora_home"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:gravity="top"
        android:text="Beranda"
        android:textAppearance="@style/xeora_home"
        android:textSize="28sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_artikel"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:gravity="top"
            android:text="@string/categories"
            android:textAppearance="@style/categories"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="280dp"
            android:layout_height="3dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="13dp"
            android:background="#80202020" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:columnCount="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/img_tasbih"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/tasbih" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/poppins"
                    android:text="Dzikir"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/img_quran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:elevation="0dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/img_doa"
            app:layout_constraintStart_toEndOf="@+id/img_tasbih"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/quran" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"

                    android:fontFamily="@font/poppins"
                    android:text="Hadist"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/img_doa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:elevation="0dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/doa" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/poppins"
                    android:text="Doa Doa"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/news"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:fontFamily="@font/poppins"
            android:gravity="top"

            android:text="@string/berita"
            android:textAppearance="@style/categories"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="260dp"
            android:layout_height="3dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:background="#80202020" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_artikel"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp">

        <TextView
            android:id="@+id/tv_title_2"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:maxLines="3"
            android:text="@string/txt_deskripsi_1"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_author_news"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/txt_stasiun_tv"
            android:textColor="@color/dark_gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_time_news"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/waktu"
            android:textColor="@color/dark_gray"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/img_artikel_2"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/news1" />

    </androidx.cardview.widget.CardView>

</LinearLayout>